--- a/css/style.css
+++ b/css/style.css
@@ -86,19 +86,6 @@ body#fotos #navegacao a.fotos {
     background: #f5f5f5;
 }
 
-.primario {
-    width: 270px;
-    float: left;
-    margin: 0 0 20px 195px;
-    background: blue;
-}
-
-.secundario {
-    width: 270px;
-    float: left;
-    margin: 0 0 20px 15px;
-    background: red;
-}
 
 .lateral {
     width: 180px;
@@ -107,6 +94,37 @@ body#fotos #navegacao a.fotos {
     background: green;
 }
 
+
+.primario {
+    width: 270px;
+    float: left;
+    margin: 0 0 20px 195px;
+    background: blue;
+}
+
+.uma-coluna .primario {
+    width: 750px;
+    float: left;
+    margin: 0 0 20px 0;
+    background: blue;
+}
+
+.duas-colunas .primario {
+    width: 555px;
+}
+
+
+.secundario {
+    width: 270px;
+    float: left;
+    margin: 0 0 20px 15px;
+    background: red;
+}
+
+/*Caixa*/
+.caixa {
+    background: #f3f3f3 url(../image/fundo-caixa.png);
+}
 
 /*Rodapé*/
 #footer {
