--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,6 @@ body {
 body #container {
     width: 750px;
     margin: 0 auto;
-    border: 1px solid red;
 }
 
 /*Topo*/
@@ -20,7 +19,6 @@ body #container {
     height: 150px;
     background: url(../image/detalhe-topo.png) no-repeat right top;
     padding-top: 25px;
-    border: 1px solid red;
 }
 
 .logo {
@@ -91,7 +89,6 @@ body#fotos #navegacao a.fotos {
     width: 180px;
     float: left;
     margin: 0 0 20px -750px;
-    background: green;
 }
 
 
@@ -99,14 +96,12 @@ body#fotos #navegacao a.fotos {
     width: 270px;
     float: left;
     margin: 0 0 20px 195px;
-    background: blue;
 }
 
 .uma-coluna .primario {
     width: 750px;
     float: left;
     margin: 0 0 20px 0;
-    background: blue;
 }
 
 .duas-colunas .primario {
@@ -118,12 +113,44 @@ body#fotos #navegacao a.fotos {
     width: 270px;
     float: left;
     margin: 0 0 20px 15px;
-    background: red;
 }
+
 
 /*Caixa*/
 .caixa {
+    margin: 10px 0;
+    padding: 5px;
     background: #f3f3f3 url(../image/fundo-caixa.png);
+}
+
+h2{
+    font-size: 1.1em;
+    background: #294c71;
+    color: #ffffff;
+    padding: 5px;
+}
+
+.caixa-conteudo {
+    background: #ffffff;
+    padding: 5px;
+    margin-top: 5px;
+}
+
+/*Menus Laterais*/
+.lateral ul a {
+    font-size: 0.9em;
+    padding: 3px;
+    display: block;
+    line-height: 30px;
+    color: #000;
+    text-decoration: none;
+    border-bottom: 1px solid #f3f3f3;
+}
+
+.lateral ul a:hover {
+    color: #a1a1a1;
+    padding-left: 20px;
+    background: url(../image/marcador.png) no-repeat left center;
 }
 
 /*Rodapé*/
