--- a/css/style.css
+++ b/css/style.css
@@ -29,8 +29,7 @@ body #container {
 }
 
 
-/*Barra de navegação
-*/
+/*Barra de navegação*/
 ul {
     margin: 0;
     padding: 0;
@@ -151,6 +150,81 @@ h2{
     color: #a1a1a1;
     padding-left: 20px;
     background: url(../image/marcador.png) no-repeat left center;
+}
+
+/*Formatando formulários*/
+label {
+    display: block;
+    cursor: pointer;
+}
+
+input {
+    padding: 5px;
+    width: 145px;
+    font-size: 0.9em;
+    background: #ffffff;
+}  
+
+input.submit {
+    width: 80px;
+    color: #fff;
+    background-color: #b10333;
+    border: 2px solid #870529;
+    padding: 5px;
+}
+
+/*formatando imagens*/
+img.imagem-principal {
+    width: 98%;
+    border: 3px solid #dfdfdf;
+}
+
+/*Formatando cabeçalhos*/
+h3 {
+    text-transform: uppercase;
+    display: inline;
+    font-size: 0.8em;
+    padding: 3px;
+}
+
+.destaque h3 {
+    background: #b10333;
+    color: #ffffff;
+}
+
+.entrevista h3 {
+    background: #f5f5f5;
+    color: #de003e;
+}
+
+/*Formatando lista de notícias*/
+#lista-noticias li {
+    padding: 2px;
+    border-bottom: 1px solid #ccc;
+    height: 65px;
+}
+
+#lista-noticias li a img{
+    float: left;
+    margin: 5px;
+}
+
+#lista-noticias li a{
+    text-decoration: none;
+}
+
+#lista-noticias li a h3{
+    font-size: 0.8em;
+    color: #294c71;
+}
+
+#lista-noticias li a p{
+    font-size: 0.7em;
+}
+
+#lista-noticias li:hover{
+    background: #eeeeee;
+    cursor: pointer;
 }
 
 /*Rodapé*/
