--- a/css/style.css
+++ b/css/style.css
@@ -1,76 +1,77 @@
 /*Estrutura do site*/
 * {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
 }
 
 body {
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    background: #ffffff url(../image/fundo.png) repeat-x;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
+  background: #ffffff url(../image/fundo.png) repeat-x;
 }
 
 body #container {
-    width: 750px;
-    margin: 0 auto;
+  width: 750px;
+  margin: 0 auto;
 }
 
 /*Topo*/
 #topo {
-    height: 150px;
-    background: url(../image/detalhe-topo.png) no-repeat right top;
-    padding-top: 25px;
+  height: 150px;
+  background: url(../image/detalhe-topo.png) no-repeat right top;
+  padding-top: 25px;
 }
 
 .logo {
-    background: url(../image/logo.png);
-    width: 152px;
-    height: 66px;
-    text-indent: -3000px;
+  background: url(../image/logo.png);
+  width: 152px;
+  height: 66px;
+  text-indent: -3000px;
 }
 
-
 /*Barra de navegação*/
-a:link, a:visited {
-    color: #b10333;
-    padding: 2px;
+a:link,
+a:visited {
+  color: #b10333;
+  padding: 2px;
 }
 
 a:hover {
-    color: #e50040;
+  color: #e50040;
 }
 
 ul {
-    margin: 0;
-    padding: 0;
-    list-style: none;
+  margin: 0;
+  padding: 0;
+  list-style: none;
 }
 
 #topo ul {
-    background: #b10333;
-    margin-top: 30px;
-    float: left;
+  background: #b10333;
+  margin-top: 30px;
+  float: left;
 }
 
 #topo ul li {
-    float: left;
+  float: left;
 }
 
 #topo ul a {
-    font-size: 0.9em;
-    display: block;
-    padding: 0.5em 1.5em;
-    line-height: 2.1em;
-    text-decoration: none;
-    color: #ffffff;
-    background: url(../image/divisor.png) no-repeat left center;
+  font-size: 0.9em;
+  display: block;
+  padding: 0.5em 1.5em;
+  line-height: 2.1em;
+  text-decoration: none;
+  color: #ffffff;
+  background: url(../image/divisor.png) no-repeat left center;
 }
 
 #topo ul .primeiro a {
-    background: none;
+  background: none;
 }
 
 #topo ul a:hover {
-    color: #69001d;
+  color: #69001d;
 }
 
 body#home #navegacao a.home,
@@ -80,171 +81,166 @@ body#economia #navegacao a.economia,
 body#saude #navegacao a.saude,
 body#ciencia #navegacao a.ciencia,
 body#fotos #navegacao a.fotos {
-    color: #ffffff;
-    background: #de003e;
-    cursor: text;
+  color: #ffffff;
+  background: #de003e;
+  cursor: text;
 }
-
 
 /* layout*/
 #conteudo {
-    margin-top: 65px;
-    background: #f5f5f5;
+  margin-top: 65px;
+  background: #f5f5f5;
 }
-
 
 .lateral {
-    width: 180px;
-    float: left;
-    margin: 0 0 20px -750px;
+  width: 180px;
+  float: left;
+  margin: 0 0 20px -750px;
 }
 
-
 .primario {
-    width: 270px;
-    float: left;
-    margin: 0 0 20px 195px;
+  width: 270px;
+  float: left;
+  margin: 0 0 20px 195px;
 }
 
 .uma-coluna .primario {
-    width: 750px;
-    float: left;
-    margin: 0 0 20px 0;
+  width: 750px;
+  float: left;
+  margin: 0 0 20px 0;
 }
 
 .duas-colunas .primario {
-    width: 555px;
+  width: 555px;
 }
-
 
 .secundario {
-    width: 270px;
-    float: left;
-    margin: 0 0 20px 15px;
+  width: 270px;
+  float: left;
+  margin: 0 0 20px 15px;
 }
-
 
 /*Caixa*/
 .caixa {
-    margin: 10px 0;
-    padding: 5px;
-    background: #f3f3f3 url(../image/fundo-caixa.png);
+  margin: 10px 0;
+  padding: 5px;
+  background: #f3f3f3 url(../image/fundo-caixa.png);
 }
 
-h2{
-    font-size: 1.1em;
-    background: #294c71;
-    color: #ffffff;
-    padding: 5px;
+h2 {
+  font-size: 1.1em;
+  background: #294c71;
+  color: #ffffff;
+  padding: 5px;
 }
 
 .caixa-conteudo {
-    background: #ffffff;
-    padding: 5px;
-    margin-top: 5px;
+  background: #ffffff;
+  padding: 5px;
+  margin-top: 5px;
 }
 
 /*Menus Laterais*/
 .lateral ul a {
-    font-size: 0.9em;
-    padding: 3px;
-    display: block;
-    line-height: 30px;
-    color: #000;
-    text-decoration: none;
-    border-bottom: 1px solid #f3f3f3;
+  font-size: 0.9em;
+  padding: 3px;
+  display: block;
+  line-height: 30px;
+  color: #000;
+  text-decoration: none;
+  border-bottom: 1px solid #f3f3f3;
 }
 
 .lateral ul a:hover {
-    color: #a1a1a1;
-    padding-left: 20px;
-    background: url(../image/marcador.png) no-repeat left center;
+  color: #a1a1a1;
+  padding-left: 20px;
+  background: url(../image/marcador.png) no-repeat left center;
 }
 
 /*Formatando formulários*/
 label {
-    display: block;
-    cursor: pointer;
+  display: block;
+  cursor: pointer;
 }
 
 input {
-    padding: 5px;
-    width: 145px;
-    font-size: 0.9em;
-    background: #ffffff;
-}  
+  padding: 5px;
+  width: 145px;
+  font-size: 0.9em;
+  background: #ffffff;
+}
 
 input.submit {
-    width: 80px;
-    color: #fff;
-    background-color: #b10333;
-    border: 2px solid #870529;
-    padding: 5px;
+  width: 80px;
+  color: #fff;
+  background-color: #b10333;
+  border: 2px solid #870529;
+  padding: 5px;
 }
 
 /*formatando imagens*/
 img.imagem-principal {
-    width: 98%;
-    border: 3px solid #dfdfdf;
+  width: 98%;
+  border: 3px solid #dfdfdf;
 }
 
 /*Formatando cabeçalhos*/
 h3 {
-    text-transform: uppercase;
-    display: inline;
-    font-size: 0.8em;
-    padding: 3px;
+  text-transform: uppercase;
+  display: inline;
+  font-size: 0.8em;
+  padding: 3px;
 }
 
 .destaque h3 {
-    background: #b10333;
-    color: #ffffff;
+  background: #b10333;
+  color: #ffffff;
 }
 
 .entrevista h3 {
-    background: #f5f5f5;
-    color: #de003e;
+  background: #f5f5f5;
+  color: #de003e;
 }
 
 /*Formatando lista de notícias*/
 #lista-noticias li {
-    padding: 2px;
-    border-bottom: 1px solid #ccc;
-    height: 65px;
+  padding: 2px;
+  border-bottom: 1px solid #ccc;
+  height: 65px;
 }
 
-#lista-noticias li a img{
-    float: left;
-    margin: 5px;
+#lista-noticias li a img {
+  float: left;
+  margin: 5px;
 }
 
-#lista-noticias li a{
-    text-decoration: none;
+#lista-noticias li a {
+  text-decoration: none;
 }
 
-#lista-noticias li a h3{
-    font-size: 0.8em;
-    color: #294c71;
+#lista-noticias li a h3 {
+  font-size: 0.8em;
+  color: #294c71;
 }
 
-#lista-noticias li a p{
-    font-size: 0.7em;
-    color: #000;
+#lista-noticias li a p {
+  font-size: 0.7em;
+  color: #000;
 }
 
-#lista-noticias li:hover{
-    background: #eeeeee;
-    cursor: pointer;
+#lista-noticias li:hover {
+  background: #eeeeee;
+  cursor: pointer;
 }
 
 /*Rodapé*/
 #footer {
-    background: #294c71;
-    padding: 20px;
+  background: #294c71;
+  padding: 20px;
 }
 
 #rodape {
-    width: 750px;
-    margin: 0 auto;
-    color: #ffffff;
+  width: 750px;
+  margin: 0 auto;
+  color: #ffffff;
 }
